Bug 474377 - Wrongly colored icons on the login screen
Summary: Wrongly colored icons on the login screen
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Theme - Breeze (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-09-10 20:45 UTC by guimarcalsilva
Modified: 2024-02-14 16:37 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Black icons instead of white ones like in 5.27 (93.99 KB, image/png)
2023-09-10 20:45 UTC, guimarcalsilva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description guimarcalsilva 2023-09-10 20:45:54 UTC
Created attachment 161544 [details]
Black icons instead of white ones like in 5.27

SUMMARY
Icons on the login screen are black instead of white on Plasma 6. The same wallpaper in 5.27 shows white icons.


STEPS TO REPRODUCE
1. Go to the login screen using the default settings and theme

OBSERVED RESULT
Hard to see icons against default wallpaper

EXPECTED RESULT
Icons that adapt to the wallpaper

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Kernel Version: 6.2.0-32-generic (64-bit)
Graphics Platform: X11
Processors: 6 × Intel® Core™ i5-9400F CPU @ 2.90GHz
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 570 Series
Comment 1 Nate Graham 2023-09-11 17:14:37 UTC
Probably fallout from the port to Kirigami.Icon.
Comment 2 David Redondo 2023-09-12 14:11:56 UTC
It's only sddm, looks correct in kscreenlocker
Comment 3 David Redondo 2023-09-12 14:27:33 UTC
This is because the greeter does not use the org.kde.desktop style and does not get the corresponding Kirigami theme plugin, and as such has only Kirigami BasicTheme and not recolorable icons.
Forcing desktop style via

 sddm-greeter --test-mode --theme ~/kde/usr/share/sddm/themes/breeze/ --style org.kde.desktop

has the icons colored correctly.
Comment 4 Bug Janitor Service 2023-09-12 14:47:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3281
Comment 5 David Redondo 2023-09-13 06:55:35 UTC
Git commit 2d46de674ced4062c53799772339ad152ffcbc69 by David Redondo.
Committed on 13/09/2023 at 08:41.
Pushed by davidre into branch 'master'.

lookandfeel: Explicitely set isMask of ActionButton

The sddm greeter is not using desktop style and consequently the
dekstop style Kirigami Theme but the default basic theme. BasicTheme
does not support recoloring of icons, however we can force recoloring
by setting isMask to true.

M  +1    -0    lookandfeel/org.kde.breeze/contents/components/ActionButton.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/2d46de674ced4062c53799772339ad152ffcbc69
Comment 6 Patrick Silva 2023-09-13 11:56:36 UTC
Battery and virtual keyboard icons are still buggy after this fix.
Comment 7 David Redondo 2023-09-13 12:07:27 UTC
I didn't notice these at all!
Comment 8 David Redondo 2023-11-07 08:57:53 UTC
Git commit 10d58e309fac21f19b0fd5ce16f8aaa445143ec6 by David Redondo.
Committed on 07/11/2023 at 09:08.
Pushed by davidre into branch 'master'.

Enforce Plasma Kirigami Them when importing Breeze lnf components

This gives us the hook to have icon recoloring in the sddm theme.

M  +3    -2    lookandfeel/CMakeLists.txt
M  +1    -1    lookandfeel/org.kde.breeze/components/UserDelegate.qml
M  +1    -1    lookandfeel/org.kde.breeze/components/WallpaperFader.qml
A  +20   -0    lookandfeel/org.kde.breeze/components/componentsplugin.cpp  *

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://invent.kde.org/plasma/plasma-workspace/-/commit/10d58e309fac21f19b0fd5ce16f8aaa445143ec6
Comment 9 Bug Janitor Service 2024-02-13 21:17:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3899
Comment 10 Nate Graham 2024-02-14 15:32:35 UTC
Git commit 8fa333fbac71c6e6068173198f8ccd92d2ba6df9 by Nate Graham.
Committed on 14/02/2024 at 15:03.
Pushed by ngraham into branch 'master'.

Revert "lookandfeel: Explicitely set isMask of ActionButton"

This reverts commit 2d46de674ced4062c53799772339ad152ffcbc69.

This change made sense to fix bug 474377 back when these icons came from
the Plasma style. However subsequently that feature was removed. As a
result, icons from the desktop icon theme are now shown here, and we
can't guarantee their visual style. As such, forcing them to be a mask
is now incorrect and obliterates the icon if it's using the full-color
style.
Related: bug 477995
FIXED-IN: 6.0

M  +0    -1    lookandfeel/components/ActionButton.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/8fa333fbac71c6e6068173198f8ccd92d2ba6df9
Comment 11 Bug Janitor Service 2024-02-14 15:38:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3904
Comment 12 Nate Graham 2024-02-14 16:37:23 UTC
Git commit e442160ea44c4aff05b53228e045a43f16907201 by Nate Graham.
Committed on 14/02/2024 at 15:38.
Pushed by ngraham into branch 'Plasma/6.0'.

Revert "lookandfeel: Explicitely set isMask of ActionButton"

This reverts commit 2d46de674ced4062c53799772339ad152ffcbc69.

This change made sense to fix bug 474377 back when these icons came from
the Plasma style. However subsequently that feature was removed. As a
result, icons from the desktop icon theme are now shown here, and we
can't guarantee their visual style. As such, forcing them to be a mask
is now incorrect and obliterates the icon if it's using the full-color
style.
Related: bug 477995
FIXED-IN: 6.0


(cherry picked from commit 8fa333fbac71c6e6068173198f8ccd92d2ba6df9)

M  +0    -1    lookandfeel/components/ActionButton.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/e442160ea44c4aff05b53228e045a43f16907201