Enforce Plasma Kirigami Them when importing Breeze lnf components

This gives us the hook to have icon recoloring in the sddm theme.
BUG:474377